2004-03-30  Paul Eggert  <eggert@twinsun.com>

	* inttostr.m4: New file.

2004-03-29  Paul Eggert  <eggert@twinsun.com>

	* cloexec.m4: New file.

2004-03-18  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* mbswidth.m4 (gl_MBSWIDTH): Also test whether <wchar.h> declares
	mbswidth.

2004-03-07  Paul Eggert  <eggert@twinsun.com>

	* c-stack.m4 (gl_PREREQ_C_STACK): Renamed from jm_PREREQ_C_STACK.
	All uses changed.  Check for sa_sigaction member; this fixes
	a bug first reported by Jason Andrade in
	<http://mail.gnu.org/archive/html/bug-textutils/2003-03/msg00027.html>.

2004-01-18  Simon Josefsson  <jas@extundo.com>

	* strdup.m4 (gl_PREREQ_STRDUP): Check whether strdup is declared.

2004-02-18  Bruno Haible  <bruno@clisp.org>

	* xsize.m4 (gl_XSIZE): Require AC_C_INLINE.
	Reported by Derek Robert Price <derek@ximbiot.com>.

2004-02-06  Karl Berry  <karl@gnu.org>

	* po.m4: update from gettext 0.14.1.

2004-02-03  Bruno Haible  <bruno@clisp.org>

	* pipe.m4: New file, from GNU gettext.

2004-01-27  Bruno Haible  <bruno@clisp.org>

	* execute.m4: New file, from GNU gettext.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* allocsa.m4: New file, from GNU gettext.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* eealloc.m4: New file, from GNU gettext.

2004-01-15  Paul Eggert  <eggert@twinsun.com>

	Merge from coreutils.

	* jm-macros.m4 (jm_CHECK_ALL_TYPES): Check for uintptr_t.
	* posixver.m4 (gl_POSIXVER): Require gl_DEFAULT_POSIX2_VERSION.
	(gl_DEFAULT_POSIX2_VERSION): Move
	the documentation from 'configure' into 'config.hin',
	so that 'configure --help' isn't burdened by it and
	we don't have to worry about its formatting there.
	Reword the documentation so that it's more succinct
	and can be run together into a single paragraph.
	* same.m4 (gl_SAME): Check for pathconf.

2004-01-15  Jim Meyering  <jim@meyering.net>

	Merge from coreutils.

	* clock_time.m4 (gl_CLOCK_TIME): Don't set LIB_CLOCK_GETTIME
	if no library is required.