@@ -1,25 +1,0 @@
-# realloc.m4 serial 7
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
-dnl This file is free software, distributed under the terms of the GNU
-dnl General Public License.  As a special exception to the GNU General
-dnl Public License, this file may be distributed as part of a program
-dnl that contains a configuration script generated by Autoconf, under
-dnl the same distribution terms as the rest of that program.
-
-dnl From Jim Meyering.
-dnl Determine whether realloc works when both arguments are 0.
-dnl If it doesn't, arrange to use the replacement function.
-
-AC_DEFUN([jm_FUNC_REALLOC],
-[
-  AC_REQUIRE([AC_FUNC_REALLOC])
-  dnl autoconf < 2.57 used the symbol ac_cv_func_realloc_works.
-  if test X"$ac_cv_func_realloc_0_nonnull" = Xno || test X"$ac_cv_func_realloc_works" = Xno; then
-    gl_PREREQ_REALLOC
-  fi
-])
-
-# Prerequisites of lib/realloc.c.
-AC_DEFUN([gl_PREREQ_REALLOC], [
-  :
-])
